[package]
name = "qa-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
data = { path = "../data" }
env_logger = "0.11.5"
mime_guess = "2.0.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
